--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html class="dark" lang="fr">
 <head>
   <meta charset="utf-8">
   <title>Frontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect" />
+  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700;900&display=swap" rel="stylesheet" />
+  <!-- Material Symbols -->
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
+  <!-- Tailwind CDN (for quick dev) -->
+  <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: { extend: { fontFamily: { display: ['Inter','Noto Sans','sans-serif'] } } }
+    }
+  </script>
 </head>
-<body>
+<body class="font-display text-slate-900 dark:text-white bg-background-light dark:bg-background-dark h-screen overflow-hidden selection:bg-primary selection:text-white">
   <app-root></app-root>
 </body>
 </html>
