--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -38,7 +38,9 @@
     }
   </script>
 </head>
-<body class="font-display text-slate-900 dark:text-white bg-background-light dark:bg-background-dark h-screen overflow-hidden selection:bg-primary selection:text-white">
+<!-- <body class="font-display text-slate-900 dark:text-white bg-background-light dark:bg-background-dark h-screen overflow-hidden selection:bg-primary selection:text-white"> -->
+
+<body>
   <app-root></app-root>
 </body>
 
