--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
   
   <!-- Material Symbols -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet">
@@ -28,12 +29,14 @@
       theme: {
         extend: {
           colors: {
-            "primary": "#0f33e6",
+            "primary": "#1a227f",
+            "accent-violet": "#7C4DFF",
             "background-light": "#f6f6f8",
-            "background-dark": "#101322",
+            "background-dark": "#0A0E2E",
+            "surface-dark": "#151B4D",
           },
           fontFamily: {
-            "display": ["Plus Jakarta Sans", "sans-serif"]
+            "display": ["Manrope", "Plus Jakarta Sans", "sans-serif"]
           },
           borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
         },
@@ -41,8 +44,14 @@
     }
   </script>
   <style>
+    body {
+      font-family: 'Manrope', 'Plus Jakarta Sans', sans-serif;
+    }
     .material-symbols-outlined {
       font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+    }
+    .filled-icon {
+      font-variation-settings: 'FILL' 1;
     }
   </style>
 </head>
